# LLaMA-Factory

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sky-dev.yaml  sky-job.yaml
configs/: deepseek_sft_qwen2.5-1.5B.yaml  llama-3.2-3B_sft_open-thoughts-2.yaml  mistral-3B_sft_open-thoughts-2.yaml  olmo-2-0425-1B-dpo_sft_open-thoughts-2.yaml  olmo-2-0425-1B-instruct_sft_open-thoughts-2.yaml  olmo-2-0425-1B-sft_sft_open-thoughts-2.yaml  olmo-2-0425-1B_sft_open-thoughts-2.yaml  olmo-2-0425-1B_sft_web-back-translation.yaml  olmo-2-0425-1B_sft_webr-basic.yaml  olmo-2-0425-1B_sft_webr-pro.yaml  olmo-2-1124-13B_sft_open-thoughts-2.yaml  olmo-2-1124-7B_sft_open-thoughts-2.yaml  qwen2-1.5B_sft_open-thoughts-2.yaml  qwen2.5-1.5B_sft_open-thoughts-2.yaml  qwen2.5-3B_sft_open-thoughts-2.yaml
data/: dataset_info.json
scripts/: convert_dataset.py  convert_open_thoughts_2.py  run_dataset_etl.py
src/llamafactory/dataset_loaders/: __init__.py  base.py  dataset_factory.py  names.py  open_thoughts_2.py  prompts.py  utils.py  web_back_translation.py  webr_basic_100K.py  webr_pro_100K.py
src/llamafactory/train/sft/: trainer.py
tests/: test_dataset_loaders.py  test_job_configs.py
